style.css
@font-face {
  font-family: CapitoliumNews2;
  src: url('assets/CapitoliumNews2/Regular.otf');
  font-style: normal;
  font-weight: 400;
}

body {
  width: 100%;
  background-color: white;
  margin: 0px;
  font-family: CapitoliumNews2;
}

ul {
  list-style: none;
  padding-left: 0;
  margin: 0;
}

button {
  position: relative;
}

button i {
  right: 20px;
  position: absolute;
  margin-top: 5px;
}

.carousel .carousel-control.right {
  background-image: none;
}

.carousel .carousel-control.left {
  background-image: none;
}

.carousel {
  width: 100%;
}

.container {
  display: flex;
  width: 100%;
  padding-left: 0;
  padding-right: 0;
}

.main-container {
  width: calc(100% - 100px);
}

.main-menu {
  width: 100px;
  background-color: #f3f3f3;
}

.main-menu .nav-menu {
  height: 980px;
  background-color: #171717;
  color: white;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.main-menu .nav-menu ul {
  display: flex;
  flex-direction: column;
}

.main-menu .contact-us {
  width: 100px;
  height: 192px;
  background-color: #868690;
  display: flex;
  justify-content: center;
  align-items: center;
}

.main-menu .contact-us .text {
  transform: rotate(-90deg);
  font-size: 14px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.43;
  letter-spacing: 1.2px;
  text-align: center;
  color: #ffffff;
  white-space: nowrap;
}

.main-menu .nav-menu ul li {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 150px;
}

.main-menu .nav-menu ul li span {
  transform: rotate(-90deg);
  opacity: 0.4;
  font-family: ProximaNova;
  font-size: 14px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.43;
  letter-spacing: 0.6px;
  text-align: center;
  color: #ffffff;
  white-space: nowrap;
  cursor: pointer;
}

.main-menu .nav-menu ul li span:hover {
  opacity: 1;
}

.main-menu .nav-menu .logo-image {
  width: 24px;
  height: 14px;
  margin-top: 70px;
}

.landing-page {
  width: 100%;
  height: 980px;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.landing-page .mobile-menu {
  position: absolute;
  margin-top: 150px;
  display: none;
}

.landing-page .mobile-menu-icon {
  display: none;
}

.landing-page video {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: fill;
}

.landing-page .main-logo {
  text-align: center;
  width: 453px;
  height: 30px;
  top: 80px !important;
  position: absolute;
  z-index: 2;
}

.landing-page .trusted-title {
  font-size: 12px;
  margin-bottom: 25px;
  display: none;
}

.landing-page .logo-title {
  font-family: CapitoliumNews2;
  font-size: 58px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.38;
  letter-spacing: -0.6px;
  color: #ffffff;
  position: relative;
  z-index: 2;
}

.landing-page .logo-title .subtitle {
  font-size: 48px;
  letter-spacing: -2px;
}

.main-content {
  margin-left: 156px;
}

.signup-page {
  display: flex;
  flex-wrap: wrap;
}

.signup-page .action-box {
  margin-top: 120px;
  width: 570px;
  min-height: 560px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #ffffff;
  box-shadow: 0 50px 80px 0 rgba(23, 23, 23, 0.1);
  margin-right: 30px;
  border-top: 1px solid #d1d1d1;
}

.action-box .action-title {
  width: 360px;
  height: 50px;
  /* font-family: CapitoliumNews2; */
  font-size: 32px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.56;
  letter-spacing: -0.2px;
  text-align: center;
  color: #05050a;
  margin-top: 120px;
}

.action-box .action-description {
  width: 340px;
  height: 108px;
  font-family: ProximaNova;
  font-size: 24px;
  font-weight: 300;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.5;
  letter-spacing: normal;
  text-align: center;
  color: #9696a0;
  margin-top: 40px;
}

.action-box .action-button {
  width: 290px;
  height: 60px;
  background-color: #868686;
  font-size: 13px;
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.54;
  letter-spacing: 0.8px;
  color: #ffffff;
  border: none;
  margin-top: 80px;
}

.action-box:hover {
  cursor: pointer;
  border-top: 1px solid #868686;
}

.action-box:hover .action-button {
  background-color: #171717;

}

.marketplace {
  background-image: url('./assets/Caption-Photo@2x.png');
  height: 720px;
  width: 100%;
  margin-top: 120px;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
}

.marketplace .description {
  width: 1024px;
  height: 320px;
  background-color: rgba(23, 23, 23, 0.8);
  display: flex;
  align-items: center;
  padding-left: 100px;
}

.marketplace .description span {
  width: 570px;
  height: 100px;
  font-size: 32px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.56;
  letter-spacing: -0.2px;
  color: #ffffff;
}

.our-approach {
  width: 100%;
  height: 807px;
  box-shadow: inset 0 -1px 0 0 #f3f3f3;
  display: flex;
}

.our-approach .left-pane {
  width: 825px;
  background-color: white;
  display: flex;
  /* align-items: center; */
  flex-direction: column;
}

.our-approach .right-menu {
  width: 100%;
  background-color: #f3f3f3;
  display: flex;
  align-items: center;
}

.our-approach .right-menu ul {
  width: 100%;
}

.our-approach .right-menu ul li {
  width: 100%;
  height: 90px;
  font-size: 16px;
  padding-left: 130px;
  display: flex;
  align-items: center;
  cursor: pointer;
  color: rgba(134, 134, 134, 0.7);
}

.our-approach .right-menu ul li.selected {
  background-color: #ffffff;
  box-shadow: 20px 15px 45px 0 rgba(23, 23, 23, 0.1);
  color: #171717;
}

.our-approach .left-pane .title {
  height: 100px;
  margin-top: 50px;
  font-size: 32px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.56;
  letter-spacing: -0.2px;
  color: #05050a;
}
/* ... */

